qtwebsockets-opensource-src (5.9.1-2) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 17 Jul 2017 21:54:40 +0300

qtwebsockets-opensource-src (5.9.1-1) experimental; urgency=medium

  * New upstream patch release.
  * Bump Qt build-dependencies to 5.9.1.
  * Run QML tests during build, drop disable_qml_tests.patch.
  * Bump Standards-Version to 4.0.0, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 02 Jul 2017 17:23:04 +0300

qtwebsockets-opensource-src (5.9.0-1) experimental; urgency=medium

  * New upstream release.
  * Build now needs private QML headers; install qtdeclarative5-private-dev
    accordingly.
  * Install the new QWebSocketProtocol file in the development headers.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 10 Jun 2017 11:39:41 -0500

qtwebsockets-opensource-src (5.7.1~20161021-4) unstable; urgency=medium

  * Build depend upon libssl1.0-dev. Tests use libssl and when libssl1.1 is
    present they fail.
  * Update symbols files with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 04 Nov 2016 11:44:33 -0300

qtwebsockets-opensource-src (5.7.1~20161021-3) unstable; urgency=medium

  * Release to unstable.
  * Update symbols files with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 01 Nov 2016 09:22:29 -0300

qtwebsockets-opensource-src (5.7.1~20161021-2) experimental; urgency=medium

  * Really release to experimental.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Oct 2016 19:44:08 -0300

qtwebsockets-opensource-src (5.7.1~20161021-1) unstable; urgency=medium

  * New upstream snapshot.
    - Bump Qt build dependencies.
  * Update symbols files with current build log.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Oct 2016 18:26:42 -0300

qtwebsockets-opensource-src (5.7.0-1) experimental; urgency=medium

  [ Simon Quigley ]
  * New upstream release.