@@ -1,5 +1,8 @@
 qtwebsockets-opensource-src (5.9.1-2) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Run the tests with --max-parallel=1 in hope it will reduce the
+    number of test failures.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 17 Jul 2017 21:54:40 +0300
 
